force-app/main/default/objects/CollectionAggregator__c/CollectionAggregator__c.object-meta.xml
<CustomObject>
    <label>Collection Aggregator</label>
    <nameField>
        <label>Collection Aggregator Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collection Aggregators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>