force-app/main/default/objects/CollectionAggregator__c/fields/Days__c.field-meta.xml
<CustomField>
    <fullName>Days__c</fullName>
    <formula>LEFT(
  IF(!ISBLANK(Monday__c), &apos;Monday, &apos;, &apos;&apos;) + 
  IF(!ISBLANK(Tuesday__c), &apos;Tuesday, &apos;, &apos;&apos;) + 
  IF(!ISBLANK(Wednesday__c), &apos;Wednesday, &apos;, &apos;&apos;) + 
  IF(!ISBLANK(Thursday__c), &apos;Thursday, &apos;, &apos;&apos;) + 
  IF(!ISBLANK(Friday__c), &apos;Friday, &apos;, &apos;&apos;) + 
  IF(!ISBLANK(Saturday__c), &apos;Saturday, &apos;, &apos;&apos;) + 
  IF(!ISBLANK(Sunday__c), &apos;Sunday, &apos;, &apos;&apos;),
  LEN(
    IF(!ISBLANK(Monday__c), &apos;Monday, &apos;, &apos;&apos;) + 
    IF(!ISBLANK(Tuesday__c), &apos;Tuesday, &apos;, &apos;&apos;) + 
    IF(!ISBLANK(Wednesday__c), &apos;Wednesday, &apos;, &apos;&apos;) + 
    IF(!ISBLANK(Thursday__c), &apos;Thursday, &apos;, &apos;&apos;) + 
    IF(!ISBLANK(Friday__c), &apos;Friday, &apos;, &apos;&apos;) + 
    IF(!ISBLANK(Saturday__c), &apos;Saturday, &apos;, &apos;&apos;) + 
    IF(!ISBLANK(Sunday__c), &apos;Sunday, &apos;, &apos;&apos;)
  ) - 2
)</formula>
    <label>Days</label>
    <type>Text</type>
</CustomField>