force-app/main/default/objects/CollectionAggregator__c/fields/Friday__c.field-meta.xml
<CustomField>
    <fullName>Friday__c</fullName>
    <label>Friday</label>
    <length>5</length>
    <type>Text</type>
</CustomField>