force-app/main/default/objects/CollectionAggregator__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Collection Aggregators</relationshipLabel>
    <relationshipName>Collection_Aggregators</relationshipName>
    <type>Lookup</type>
</CustomField>