force-app/main/default/objects/CollectionAggregator__c/fields/Monday__c.field-meta.xml
<CustomField>
    <fullName>Monday__c</fullName>
    <label>Monday</label>
    <length>5</length>
    <type>Text</type>
</CustomField>