force-app/main/default/objects/CollectionAggregator__c/fields/Saturday__c.field-meta.xml
<CustomField>
    <fullName>Saturday__c</fullName>
    <label>Saturday</label>
    <length>5</length>
    <type>Text</type>
</CustomField>