force-app/main/default/objects/CollectionAggregator__c/fields/Sunday__c.field-meta.xml
<CustomField>
    <fullName>Sunday__c</fullName>
    <label>Sunday</label>
    <length>5</length>
    <type>Text</type>
</CustomField>