force-app/main/default/objects/CollectionAggregator__c/fields/Supplier_Product__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Product</label>
    <referenceTo>Supplier_Product__c</referenceTo>
    <relationshipLabel>Collection Aggregators</relationshipLabel>
    <relationshipName>Collection_Aggregators</relationshipName>
    <type>Lookup</type>
</CustomField>