force-app/main/default/objects/CollectionAggregator__c/fields/SupplierProductName__c.field-meta.xml
<CustomField>
    <fullName>SupplierProductName__c</fullName>
    <formula>Supplier_Product__r.Product_Name__c</formula>
    <label>Supplier Product Name</label>
    <type>Text</type>
</CustomField>