force-app/main/default/objects/CollectionAggregator__c/fields/Thursday__c.field-meta.xml
<CustomField>
    <fullName>Thursday__c</fullName>
    <label>Thursday</label>
    <length>5</length>
    <type>Text</type>
</CustomField>