force-app/main/default/objects/CollectionAggregator__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <formula>IF(!ISBLANK(Monday__c), Monday__c,
IF(!ISBLANK(Tuesday__c), Tuesday__c,
IF(!ISBLANK(Wednesday__c), Wednesday__c,
IF(!ISBLANK(Thursday__c), Thursday__c,
IF(!ISBLANK(Friday__c), Friday__c,
IF(!ISBLANK(Saturday__c), Saturday__c,
IF(!ISBLANK(Sunday__c), Sunday__c, &apos;&apos;)))))))</formula>
    <label>Time</label>
    <type>Text</type>
</CustomField>