force-app/main/default/objects/CollectionAggregator__c/fields/Tuesday__c.field-meta.xml
<CustomField>
    <fullName>Tuesday__c</fullName>
    <label>Tuesday</label>
    <length>5</length>
    <type>Text</type>
</CustomField>