force-app/main/default/objects/CollectionAggregator__c/fields/Wednesday__c.field-meta.xml
<CustomField>
    <fullName>Wednesday__c</fullName>
    <label>Wednesday</label>
    <length>5</length>
    <type>Text</type>
</CustomField>